<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/item_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/nav_dashboard" />

        <item
            android:id="@+id/item_photo"
            android:icon="@drawable/ic_photo_black_24dp"
            android:title="@string/nav_photo" />

        <item
            android:id="@+id/item_music"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:title="@string/nav_music" />

        <item
            android:id="@+id/item_movie"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/nav_movie" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/nav_download" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <group android:id="@+id/group_about">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_donate_black_24dp"
            android:title="@string/nav_donate" />
        <item
            android:id="@+id/nav_my_apps"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/nav_my_apps" />
    </group>

</menu>
